ingress/ingress-example-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-1
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
      # 設定路徑
        path: /test
        backend: 
          service:
            name: test
            port: 
              number: 80
